<resources>
    <string name="app_name">Movie Tickets</string>
    <string name="enter_email">Enter Email</string>
    <string name="do_not_have_account">Don\'t have an account? SignUp</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="view_tickets">View Tickets</string>
    <string name="add_car_slots">Add Seats</string>
    <string name="title_activity_add_seats_slots">Add Seats</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_seats_slot">Add Ticket</string>
    <string name="delete_confirmation">Deleting Ticket!</string>
    <string name="dleteion_dis">Are you sure to delete!</string>
    <string name="please_wait">Please wait!</string>
    <string name="admin_id">LyGA4GKZp3ftcaEkVFrws3l8FZT2</string>
    <string name="enter_discription">Enter Discription</string>
    <string name="enter_status">Enter Status</string>
    <string name="add_all_data">Add All Data!</string>
    <string name="avalibel">Available</string>
    <string name="total_seats">"Total Tickets Available : "</string>
    <string name="avalibe_seats">"Avalible Seats : "</string>
    <string name="already_have_an_account">"Already have a account? Login "</string>
    <string name="signUp">Sign Up</string>
    <string name="update_seats">Update Seats</string>
    <string name="logout">Logout</string>
    <string name="splash">splash</string>
    <string name="ticket_number">"Ticket Number : "</string>
    <string name="admin_login">Admin Login</string>
    <string name="use_admin_login">Use Admin Credentials for Login</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_movie_seat_slot">Add movie seat</string>
    <string name="add_more_seats_first">Add more seats first</string>
    <string name="edit_total_seats">Edit total seats</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_total_seats">Enter Total Seats</string>
    <string name="movie_model">MOVIE_MODEL</string>
    <string name="view_seats">View Seats</string>

    <string-array name="statues">
        <item>Select Movie Ticket Status</item>
        <item>Available</item>
        <item>Occupied</item>
    </string-array>
</resources>