<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_2000"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:hint="@string/edit_total_seats"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/discription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:hint="@string/enter_discription"
        android:inputType="number"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/rounded_button_bg"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp" />
</androidx.appcompat.widget.LinearLayoutCompat>